--- a/aws-android-sdk-appsync-gradle-plugin/build.gradle
+++ b/aws-android-sdk-appsync-gradle-plugin/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 
     compileOnly gradleApi()
     compileOnly localGroovy()
-    compileOnly "com.moowork.gradle:gradle-node-plugin:1.0.0"
+    compile "com.moowork.gradle:gradle-node-plugin:1.0.0" // compileOnly
     compile 'com.android.tools.build:gradle:2.3.1' // compileOnly TODO Check if this can be upgraded.
     compile 'com.squareup.moshi:moshi:1.5.0' // impl
 
