--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.aws_version = VERSION_NAME
     repositories {
         google()
         jcenter()
