Add android instrumentation tests for AppSync GraphQL Query

--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compileOnly project(':aws-android-sdk-appsync-runtime')
 
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -51,6 +52,7 @@ dependencies {
 
     androidTestImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     androidTestImplementation "org.mockito:mockito-core:2.19.1"
+    androidTestImplementation project(':aws-android-sdk-appsync-runtime')
 
     testImplementation "org.robolectric:robolectric:3.8"
     testImplementation "org.mockito:mockito-core:2.19.1"
