--- a/aws-android-sdk-appsync/src/main/AndroidManifest.xml
+++ b/aws-android-sdk-appsync/src/main/AndroidManifest.xml
@@ -3,4 +3,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <application>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+    </application>
 </manifest>
