--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -30,8 +30,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.google.code.findbugs:jsr305:3.0.1' // api
-    implementation "com.squareup.okhttp3:okhttp:3.8.1" // impl
+    compile 'com.google.code.findbugs:jsr305:3.0.1' // api
+    compile "com.squareup.okhttp3:okhttp:3.8.1" // impl
 
     compile "com.amazonaws:aws-android-sdk-core:$aws_version" // api
     compileOnly "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
