--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.6.16'
+        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.6.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
