--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     compileOnly "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     compileOnly "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
-
     compileOnly 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
     compileOnly 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
 
@@ -51,4 +50,11 @@ dependencies {
     androidTestImplementation project(':aws-android-sdk-appsync-runtime')
     androidTestImplementation project(':aws-android-sdk-appsync-api')
 
+    androidTestImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
+    androidTestImplementation "org.mockito:mockito-core:2.19.1"
+    androidTestImplementation project(':aws-android-sdk-appsync-runtime')
+    testImplementation "org.robolectric:robolectric:3.8"
+    testImplementation "org.mockito:mockito-core:2.19.1"
+    testImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
+    testImplementation project(':aws-android-sdk-appsync-runtime')
 }
