ClientID for APIKey and connection handling (#43)
* Changes for Client ID for API Key.
Tested locally using Integration tests.

* Tweaked config file for testing

* Changed log message

* Added additional tests and cleaned up MQTT disconnect logic.

* Added graphql files

* Addressed review comments - round 1.

* Restructured project to move tests from "aws-android-skd-appsync" module to a new module "aws-android-skd-appysync-tests"

* More restructuring changes. Removed unecessary files, imports and tweaked the gradle/manifest files

* Change log and version bump

* Adjusted changelog

* Reverted dependency changes to fix unit tests that were broken.

* Addressed review comments, round 2.

--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     compileOnly "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     compileOnly "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
-    compileOnly 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
-    compileOnly 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    compileOnly 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
+    compileOnly 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
 
     compileOnly project(':aws-android-sdk-appsync-runtime')
 
@@ -53,7 +53,6 @@ dependencies {
     androidTestImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     androidTestImplementation "org.mockito:mockito-core:2.19.1"
     androidTestImplementation project(':aws-android-sdk-appsync-runtime')
-
     testImplementation "org.robolectric:robolectric:3.8"
     testImplementation "org.mockito:mockito-core:2.19.1"
     testImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
