--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -1,35 +1,42 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.android.library'
 apply plugin: 'com.amazonaws.appsync'
 
 android {
     compileSdkVersion 28
+
+
+
     defaultConfig {
-        applicationId "com.amazonaws.mobileconnectors.appsync.demo"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
-        disable 'GradleDependency', 'GoogleAppIndexingWarning'
-    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    androidTestImplementation project(':aws-android-sdk-appsync-runtime')
+    androidTestImplementation project(':aws-android-sdk-appsync-api')
+    androidTestImplementation project(':aws-android-sdk-appsync')
+
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
+    compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
 }
