--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 before_install:
-- openssl aes-256-cbc -K $encrypted_ac814b4117bc_key -iv $encrypted_ac814b4117bc_iv
-  -in aws-android-sdk-appsync/assets/appsync_test_credentials.json.enc -out aws-android-sdk-appsync-tests/src/main/assets/appsync_test_credentials.json
-  -d
+- openssl aes-256-cbc -K $encrypted_2027fd11a059_key -iv $encrypted_2027fd11a059_iv -in /tmp/appsync_test_credentials.json -out aws-android-sdk-appsync-tests/src/main/assets/appsync_test_credentials.json -d
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
 - android list target
