Added --stacktrace to gradlew command

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ android:
   - sys-img-armeabi-v7a-android-22
 script:
 - android list target
-- "./gradlew build connectedCheck"
+- "./gradlew build connectedCheck --stacktrace"
