Added debug flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,6 @@ android:
   - sys-img-armeabi-v7a-android-22
 script:
 - android list target
-- "./gradlew build connectedCheck --stacktrace"
+- "./gradlew build connectedCheck --debug "
+after_failure:
+  - cat aws-android-sdk-appsync-tests/build/outputs/androidTest-results/connected/*.xml
