--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 before_install:
 - openssl aes-256-cbc -K $encrypted_2027fd11a059_key -iv $encrypted_2027fd11a059_iv -in aws-android-sdk-appsync/assets/appsync_test_credentials.json.enc -out aws-android-sdk-appsync-tests/src/main/assets/appsync_test_credentials.json -d
+- ls -l aws-android-sdk-appsync-tests/src/main/assets/appsync_test_credentials.json
+- wc aws-android-sdk-appsync-tests/src/main/assets/appsync_test_credentials.json
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
 - android list target
