Updated core AWS SDK version to latest ( 2.7.2)

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.40'
-    ext.aws_version = VERSION_NAME
+    ext.aws_version = AWS_CORE_SDK_VERSION
     repositories {
         google()
         jcenter()
