--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ org.gradle.parallel=true
 
 GROUP=com.amazonaws
 VERSION_NAME=2.6.26
+AWS_CORE_SDK_VERSION=2.7.2
 
 POM_URL=https://github.com/awslabs/aws-mobile-appsync-sdk-android
 POM_SCM_URL=https://github.com/awslabs/aws-mobile-appsync-sdk-android
