--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.google.code.findbugs:jsr305:3.0.1' // api
@@ -60,4 +61,6 @@ dependencies {
     implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.7.+@aar') { transitive = true }
     implementation ('com.amazonaws:aws-android-sdk-auth-userpools:2.7.+@aar') { transitive = true }
 
+    def lifecycle_version = "1.1.1"
+    implementation("android.arch.lifecycle:runtime:$lifecycle_version")
 }
