--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
     lintOptions {
         disable 'GradleDependency', 'GoogleAppIndexingWarning'
@@ -27,9 +28,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation 'com.android.support:support-compat:28.+'
+    implementation 'com.android.support:recyclerview-v7:28.+'
+    compile 'com.android.support:design:28.+'
+
+    
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation project(':aws-android-sdk-appsync-runtime')
+    implementation project(':aws-android-sdk-appsync-api')
+    implementation project(':aws-android-sdk-appsync')
+
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
+    compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.7.+'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.7.+'
+
+    def lifecycle_version = "1.1.1"
+    implementation("android.arch.lifecycle:runtime:$lifecycle_version")
+    implementation("android.arch.lifecycle:extensions:$lifecycle_version")
+
 }
