--- a/aws-android-sdk-appsync-tests/src/main/AndroidManifest.xml
+++ b/aws-android-sdk-appsync-tests/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="com.example.aws_android_sdk_appsync_tests" >
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <application>
         <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
