--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.7.+'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.7.+'
+    implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
+    implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
     def lifecycle_version = "1.1.1"
     implementation("android.arch.lifecycle:runtime:$lifecycle_version")
