--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.19.1"
     testImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     testImplementation project(':aws-android-sdk-appsync-runtime')
-    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.8.2@aar') { transitive = true }
-    implementation ('com.amazonaws:aws-android-sdk-auth-userpools:2.8.2@aar') { transitive = true }
+    implementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
+    implementation ("com.amazonaws:aws-android-sdk-auth-userpools:$aws_version@aar") { transitive = true }
 
     def lifecycle_version = "1.1.1"
     implementation("android.arch.lifecycle:runtime:$lifecycle_version")
