Complex objects - bug fixes, code-refactoring and integration tests

--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -25,6 +25,7 @@ android {
 
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -37,6 +38,7 @@ dependencies {
     androidTestImplementation project(':aws-android-sdk-appsync-api')
     androidTestImplementation project(':aws-android-sdk-appsync')
 
+    implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
 }
