--- a/aws-android-sdk-appsync-api/build.gradle
+++ b/aws-android-sdk-appsync-api/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+apply plugin: 'maven-publish'
 
 apply from: rootProject.file('gradle-mvn-push.gradle')
 
@@ -8,6 +9,17 @@ dependencies {
     compile 'javax.annotation:jsr250-api:1.0' // compileOnly
 
     compile "com.squareup.okhttp3:okhttp:3.8.1" // compileOnly
+}
+
+publishing {
+    publications {
+        pluginPublication(MavenPublication) {
+            from  components.java
+            groupId 'com.amazonaws'
+            artifactId 'aws-android-sdk-appsync-api'
+            version VERSION_NAME + "-SNAPSHOT"
+        }
+    }
 }
 
 sourceCompatibility = "1.7"
