--- a/aws-android-sdk-appsync-compiler/build.gradle
+++ b/aws-android-sdk-appsync-compiler/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'maven-publish'
 
 apply from: rootProject.file('gradle-mvn-push.gradle')
 
@@ -17,6 +18,17 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.1' // compileOnly
 
     compile project(':aws-android-sdk-appsync-api') // impl
+}
+
+publishing {
+    publications {
+        pluginPublication(MavenPublication) {
+            from  components.java
+            groupId  'com.amazonaws'
+            artifactId  'aws-android-sdk-appsync-compiler'
+            version  VERSION_NAME + "-SNAPSHOT"
+        }
+    }
 }
 
 task pluginVersion {
