--- a/aws-android-sdk-appsync-gradle-plugin/build.gradle
+++ b/aws-android-sdk-appsync-gradle-plugin/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'java-gradle-plugin'
+apply plugin: 'maven-publish'
 
 apply from: rootProject.file('gradle-mvn-push.gradle')
 
@@ -17,6 +18,17 @@ dependencies {
     compile 'com.squareup.moshi:moshi:1.5.0' // impl
 
     compile project(':aws-android-sdk-appsync-compiler') // impl
+}
+
+publishing {
+    publications {
+        pluginPublication(MavenPublication) {
+            from components.java
+            groupId 'com.amazonaws'
+            artifactId 'aws-android-sdk-appsync-gradle-plugin'
+            version VERSION_NAME + "-SNAPSHOT"
+        }
+    }
 }
 
 sourceCompatibility = "1.7"
