--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -1,10 +1,25 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.amazonaws.appsync'
 
+buildscript {
+    ext.version = VERSION_NAME
+    ext.aws_version = AWS_CORE_SDK_VERSION
+    repositories {
+        mavenLocal()
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$VERSION_NAME"
+        classpath 'com.android.tools.build:gradle:3.1.3'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 android {
     compileSdkVersion 28
-
-
 
     defaultConfig {
         minSdkVersion 15
@@ -25,6 +40,11 @@ android {
 
 }
 
+repositories {
+    mavenLocal()
+    google()
+    jcenter()
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,9 +54,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    androidTestImplementation project(':aws-android-sdk-appsync-runtime')
-    androidTestImplementation project(':aws-android-sdk-appsync-api')
-    androidTestImplementation project(':aws-android-sdk-appsync')
+    androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
+    androidTestImplementation "com.amazonaws:aws-android-sdk-appsync-runtime:$VERSION_NAME"
+    androidTestImplementation "com.amazonaws:aws-android-sdk-appsync-api:$VERSION_NAME"
 
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
