--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 apply from: rootProject.file('gradle-mvn-push.gradle')
 
@@ -63,4 +64,15 @@ dependencies {
 
     def lifecycle_version = "1.1.1"
     implementation("android.arch.lifecycle:runtime:$lifecycle_version")
+}
+
+publishing {
+    publications {
+        library(MavenPublication) {
+            groupId 'com.amazonaws'
+            artifactId 'aws-android-sdk-appsync'
+            version VERSION_NAME + "-SNAPSHOT"
+            artifact(bundleReleaseAar)
+        }
+    }
 }
