--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-
+apply plugin: 'maven-publish'
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
