--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -32,10 +32,10 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.code.findbugs:jsr305:3.0.1' // api
-    compile "com.squareup.okhttp3:okhttp:3.8.1" // impl
+    implementation 'com.google.code.findbugs:jsr305:3.0.1' // api
+    implementation "com.squareup.okhttp3:okhttp:3.8.1" // impl
 
-    compile "com.amazonaws:aws-android-sdk-core:$aws_version" // api
+    implementation "com.amazonaws:aws-android-sdk-core:$aws_version" // api
     compileOnly "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     compileOnly "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
@@ -66,13 +66,15 @@ dependencies {
     implementation("android.arch.lifecycle:runtime:$lifecycle_version")
 }
 
-publishing {
-    publications {
-        library(MavenPublication) {
-            groupId 'com.amazonaws'
-            artifactId 'aws-android-sdk-appsync'
-            version VERSION_NAME + "-SNAPSHOT"
-            artifact(bundleReleaseAar)
+project.afterEvaluate {
+    publishing {
+        publications {
+            library(MavenPublication) {
+                groupId 'com.amazonaws'
+                artifactId 'aws-android-sdk-appsync'
+                version VERSION_NAME + "-SNAPSHOT"
+                artifact(bundleReleaseAar)
+            }
         }
     }
 }
