--- a/aws-android-sdk-appsync-api/build.gradle
+++ b/aws-android-sdk-appsync-api/build.gradle
@@ -6,7 +6,7 @@ apply from: rootProject.file('gradle-mvn-push.gradle')
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.findbugs:jsr305:3.0.1' // compileOnly
-    implementation 'javax.annotation:jsr250-api:1.0' // compileOnly
+    api 'javax.annotation:jsr250-api:1.0' // compileOnly
 
     implementation "com.squareup.okhttp3:okhttp:3.8.1" // compileOnly
 }
