--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.google.code.findbugs:jsr305:3.0.1' // api
+    implementation 'com.google.code.findbugs:jsr305:3.0.1' // api
     implementation "com.squareup.okhttp3:okhttp:3.8.1" // impl
 
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version" // api
