--- a/aws-android-sdk-appsync-compiler/build.gradle
+++ b/aws-android-sdk-appsync-compiler/build.gradle
@@ -12,12 +12,12 @@ sourceSets {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.squareup:javapoet:1.8.0' // impl
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // impl
-    implementation 'com.squareup.moshi:moshi:1.5.0' // impl
-    implementation 'com.google.code.findbugs:jsr305:3.0.1' // compileOnly
+    compile 'com.squareup:javapoet:1.8.0' // impl
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // impl
+    compile 'com.squareup.moshi:moshi:1.5.0' // impl
+    compile 'com.google.code.findbugs:jsr305:3.0.1' // compileOnly
 
-    implementation project(':aws-android-sdk-appsync-api') // impl
+    compile project(':aws-android-sdk-appsync-api') // impl
 }
 
 publishing {
