[MultiAuth] Support Multiple Authorization modes for AWSAppSyncClient (#174)
* [MultiAuth] Support Multiple Authorization modes for AWSAppSyncClient

* [Android] Support Multiple Authorization modes for AWSAppSyncClient

* [Android] Support Multiple Authorization modes for AWSAppSyncClient

* [MultiAuth] Support Multiple Authorization modes for AWSAppSyncClient

* [API] [GraphQL] Support Multiple Authorization modes for AWSAppSyncClient

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# idea folder for tests
+aws-android-sdk-appsync-tests/.idea/
+.idea/
