--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     compileOnly "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     compileOnly "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
-    compileOnly 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.+'
-    compileOnly 'org.eclipse.paho:org.eclipse.paho.android.service:1.+'
+    compileOnly 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.2'
+    compileOnly 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 
     compileOnly project(':aws-android-sdk-appsync-runtime')
 
