--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -44,19 +44,20 @@ dependencies {
 
     compileOnly project(':aws-android-sdk-appsync-runtime')
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     androidTestImplementation project(':aws-android-sdk-appsync-runtime')
     androidTestImplementation project(':aws-android-sdk-appsync-api')
 
     androidTestImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
-    androidTestImplementation "org.mockito:mockito-core:2.19.1"
     androidTestImplementation project(':aws-android-sdk-appsync-runtime')
-    testImplementation "org.robolectric:robolectric:3.8"
-    testImplementation "org.mockito:mockito-core:2.19.1"
+    testImplementation 'junit:junit:4.13'
+    testImplementation ('org.robolectric:robolectric:4.3.1') {
+        // https://github.com/robolectric/robolectric/issues/5245
+        exclude group: 'com.google.auto.service', module: 'auto-service'
+    }
+    testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:$aws_version"
     testImplementation project(':aws-android-sdk-appsync-runtime')
     implementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
