--- a/aws-android-sdk-appsync-runtime/build.gradle
+++ b/aws-android-sdk-appsync-runtime/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
-    implementation "com.squareup.okhttp3:okhttp:3.8.1" // impl
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1' // impl
     api "com.nytimes.android:cache:2.0.2" // impl
 
     api project(':aws-android-sdk-appsync-api') // api
