Update most all dependencies to latest versions (#255)
* Update Android Support Libraries to latest

* Update test dependencies, jUnit to 4.13, Robolectric to 4.3.1.

* Update OkHttp to latest, 4.3.1.

* Update FindBugs JSR305 to 3.0.2.

* Fixup Javadoc generation task

* Use explicit version of AppSync Gradle Plugin

* Update New York Times cache dependency

--- a/aws-android-sdk-appsync-runtime/build.gradle
+++ b/aws-android-sdk-appsync-runtime/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
-
 apply from: rootProject.file('gradle-mvn-push.gradle')
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
-    implementation "com.squareup.okhttp3:okhttp:3.8.1" // impl
-    api "com.nytimes.android:cache:2.0.2" // impl
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1' // impl
+    api 'com.nytimes.android:cache:2.1.1' // impl
 
     api project(':aws-android-sdk-appsync-api') // api
 }
@@ -26,3 +25,4 @@ publishing {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
