--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'com.amazonaws.appsync'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.amazonaws.mobileconnectors.appsync.demo"
         minSdkVersion 15
@@ -13,6 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,36 +22,31 @@ android {
         }
 
     }
+
     lintOptions {
         disable 'GradleDependency', 'GoogleAppIndexingWarning'
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Android / Platform
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
+    // AWS
     implementation project(':aws-android-sdk-appsync-runtime')
     implementation project(':aws-android-sdk-appsync-api')
     implementation project(':aws-android-sdk-appsync')
-
-    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.2'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
-    def lifecycle_version = "1.1.1"
-    implementation("android.arch.lifecycle:runtime:$lifecycle_version")
-    implementation("android.arch.lifecycle:extensions:$lifecycle_version")
-
+    // 3P
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.2'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
