--- a/aws-android-sdk-appsync-compiler/build.gradle
+++ b/aws-android-sdk-appsync-compiler/build.gradle
@@ -10,14 +10,11 @@ sourceSets {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.squareup:javapoet:1.8.0' // impl
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // impl
-    implementation 'com.squareup.moshi:moshi:1.5.0' // impl
-    implementation 'com.google.code.findbugs:jsr305:3.0.2' // compileOnly
-
-    implementation project(':aws-android-sdk-appsync-api') // impl
+    implementation project(':aws-android-sdk-appsync-api')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.squareup:javapoet:1.8.0'
+    implementation 'com.squareup.moshi:moshi:1.5.0'
 }
 
 publishing {
