--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
     ext.aws_version = AWS_CORE_SDK_VERSION
+
     repositories {
         google()
         jcenter()
@@ -8,7 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.8.3'
+        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$VERSION_NAME"
     }
 }
 
