Consolidate gradle extension for publishing to maven

--- a/gradle-mvn-push.gradle
+++ b/gradle-mvn-push.gradle
@@ -16,6 +16,7 @@
 
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'maven-publish'
 
 version = VERSION_NAME
 group = GROUP
@@ -233,6 +234,21 @@ afterEvaluate { project ->
     } else {
       archives sourcesJar
       archives javadocJar
+    }
+  }
+
+  publishing {
+    publications {
+      library(MavenPublication) {
+        groupId GROUP
+        artifactId POM_ARTIFACT_ID
+        version VERSION_NAME + "-SNAPSHOT"
+        if (POM_ARTIFACT_ID == 'aws-android-sdk-appsync') {
+          artifact(bundleReleaseAar)
+        } else {
+          from  components.java
+        }
+      }
     }
   }
 }
