--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
-apply from: rootProject.file('gradle-mvn-push.gradle')
+//apply from: rootProject.file('gradle-mvn-push.gradle')
 
 android {
     compileSdkVersion 28
