--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -49,6 +49,7 @@ repositories {
 
 dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
     androidTestImplementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
