Rewrite all instrumentation tests for legibility and correctness (#256)
The instrumentation tests suffer from numerous factoring issues. Among the largest issues:

1. AppSync callbacks occur on a different thread, but jUnit assertions are made inside of them. jUnit cannot catch the assertions, since they aren't occurring on the same thread as the test runner. To resolve this, several utilities are added that facilitate turning asynchronous calls into a synchronous ones (`LatchedGraphQLCallback`, `LatchedSubscriptionCallback`, `Await`, etc.)

2. A call to AppSync requires instantiation of several different objects. In the tests, each component is cached into a local variable, and then all of them are composed together for a final call to AppSync. This makes it difficult to see what is actually being passed to AppSync. Instead, each object is inlined into a single big call to AppSync. This results in some dense statements, however it is easy to see which things go together, now.

3.  Lots of minor, Android Lint / code inspection issues that Android Studio will flag. Some of these include use of raw types or unchecked type conversions, object visibility escalation, dead-store methods and fields.

By submitting this pull request, I confirm that you can use, modify, copy, and redistribute this contribution, under the terms of your choice.

--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -34,6 +34,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {
@@ -44,6 +49,7 @@ repositories {
 
 dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
     androidTestImplementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
