--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
+- adb -e logcat *:W | tee logcat.log > /dev/null 2>&1 &
 - adb shell input keyevent 82 &
 language: android
 android:
@@ -27,3 +28,4 @@ script:
 - cd ..
 after_failure:
   - cat aws-android-sdk-appsync-tests/build/outputs/androidTest-results/connected/*.xml
+  - - echo " LOGCAT "; echo "========"; cat logcat.log; pkill -KILL -f adb
